--- a/result/2022-01-03.md
+++ b/result/2022-01-03.md
@@ -40,3 +40,4 @@
 40. [白桃星座](https://s.weibo.com//weibo?q=%23%E7%99%BD%E6%A1%83%E6%98%9F%E5%BA%A7%23&Refer=top) 133470
 41. [春运火车票1月3日开始发售](https://s.weibo.com//weibo?q=%23%E6%98%A5%E8%BF%90%E7%81%AB%E8%BD%A6%E7%A5%A81%E6%9C%883%E6%97%A5%E5%BC%80%E5%A7%8B%E5%8F%91%E5%94%AE%23&Refer=top) 119825
 42. [爸妈催婚都有哪些套路](https://s.weibo.com//weibo?q=%23%E7%88%B8%E5%A6%88%E5%82%AC%E5%A9%9A%E9%83%BD%E6%9C%89%E5%93%AA%E4%BA%9B%E5%A5%97%E8%B7%AF%23&Refer=top) 113520
+43. [我身边的向上力](https://s.weibo.com//weibo?q=%23%E6%88%91%E8%BA%AB%E8%BE%B9%E7%9A%84%E5%90%91%E4%B8%8A%E5%8A%9B%23&Refer=top) 9955
